# YAND-MVSK-tailrisk

./: README.md
YAND/: README.md  pyproject.toml  requirements.txt  run.sh
YAND/examples/: basic_usage.py  behavioral_calibration.py
YAND/frontend/: app.js  index.html  styles.css
YAND/src/yand_mvsk/: __init__.py  behavioral.py  cli.py  linalg.py  moments.py  optimizer.py  risk.py  yand.py
YAND/src/yand_mvsk/api/: __init__.py  app.py  schemas.py  service.py
YAND/src/yand_mvsk/data/: __init__.py  catalog.py  market.py
YAND/tests/: conftest.py  test_behavioral.py  test_data.py  test_moments.py  test_risk.py  test_service_api.py  test_yand.py
